[package]
edition = "2021"
name = "kcl-ts"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
kcl-lib = { version = "0.2.8", features = ["napi"] }
#kcl-lib = { path = "../kittycad/modeling-app/src/wasm-lib/kcl", features = ["napi"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
